@@ -30,25 +30,23 @@ This script starts the system-wide installed version of the application.
 
 # Import global modules
 import __builtin__
-import gtk.glade
-import gettext
 import sys
 import os
 
 
 # Initialize l8n support
-domain_name = "psrregshuffle"
-locale_dir     = os.path.join(sys.prefix, "share", "locale")
+import psrregshuffle.translation
 
-gettext.install(domain_name, locale_dir, unicode=1)
-gtk.glade.bindtextdomain(domain_name, locale_dir)
-gtk.glade.textdomain(domain_name)
+domainName = "psrregshuffle"
+localeDir  = os.path.join(sys.prefix, "share", "locale")
+
+psrregshuffle.translation.init(domainName, localeDir)
 
 
 # Set path of data directory
 import psrregshuffle.const
-dataDir = os.path.join(sys.prefix, "share", psrregshuffle.const.techname)
 
+dataDir = os.path.join(sys.prefix, "share", psrregshuffle.const.techname)
 __builtin__.__dict__["__PSR_DATA_DIR__"] = dataDir
 
 
