@@ -30,8 +30,6 @@ This script starts the local development version of the application.
 
 # Import global modules
 import __builtin__
-import gtk.glade
-import gettext
 import sys
 import os
 
@@ -43,18 +41,17 @@ sys.argv[0] = "psrregshuffle"
 
 
 # Initialize l8n support
-domain_name = "psrregshuffle"
-locale_dir  = os.path.join(sys.path[0], "l18n", "build")
+import src.translation
 
-gettext.install(domain_name, locale_dir, unicode=1)
-gtk.glade.bindtextdomain(domain_name, locale_dir)
-gtk.glade.textdomain(domain_name)
+domainName = "psrregshuffle"
+localeDir  = os.path.join(sys.path[0], "l18n", "build")
+
+src.translation.init(domainName, localeDir)
 
 
 # Set path of data directory
 dataDir = os.getcwd()
 dataDir = os.path.join(dataDir, "data")
-
 __builtin__.__dict__["__PSR_DATA_DIR__"] = dataDir
 
 
