@@ -1,3 +1,11 @@
+2008-09-28  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
+
+ * Fixed bug of missing translations under MS Windows.
+ * While at it made helper scripts use program name and version definitions
+   of const module instead of literals. (Finaly)
+ * Maybe introduced a new bug: Creation of man pages doesn't work anymore.
+
+
 2008-09-25  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
 
  * Completly reimplemented batch processing algorithm. Now it is possible
